# hello-cpp

./: CMakeLists.txt  main.cpp
